<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:title="@string/action_searching"
        app:showAsAction="always" >
    </item>

    <item
        android:id="@+id/action_notification"
        android:orderInCategory="100"
        android:icon="@drawable/ic_notification"
        android:title="@string/action_notification"
        app:showAsAction="always" >
    </item>

    <item
        android:id="@+id/action_shopping_cart"
        android:orderInCategory="100"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/action_shopping_cart"
        app:showAsAction="always" >
    </item>
</menu>