<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound_color_splash"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_standard_new"
            android:paddingTop="@dimen/spacing_smlarge"
            android:paddingEnd="@dimen/spacing_standard_new"
            android:paddingBottom="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_app_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="m-Shop"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="cursive">
            </TextView>

            <EditText
                android:id="@+id/edtEmailSignIn"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true">
            </EditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ractangle_rounded_inactive"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_smlarge"
                android:layout_marginEnd="@dimen/spacing_standard">

                <EditText
                    android:id="@+id/edtPasswordSignIn"
                    style="@style/EditTextStyle"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/tvForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:id="@+id/tvForgot"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="@dimen/spacing_middle"
                    android:text="@string/lbl_forgot"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_size_medium">
                </TextView>
            </RelativeLayout>

            <Button
                android:id="@+id/btnSignIninSignIn"
                style="@style/MaterialButtonStyle.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_mxlarge"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:text="@string/lbl_sign_in">
            </Button>

            <Button
                android:id="@+id/btnSignUpinSignIn"
                style="@style/MaterialButtonStyle.Stroked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:text="@string/lbl_sign_up">
            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_size_medium"
                android:text="@string/lbl_sign_in_with">
            </TextView>

            <include layout="@layout/layout_social_buttons" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>