<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound_color_splash"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_standard_new"
            android:paddingTop="@dimen/spacing_smlarge"
            android:paddingEnd="@dimen/spacing_standard_new"
            android:paddingBottom="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo_shop"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:text="m-Shop"
                android:textSize="50sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="@dimen/spacing_standard"
                android:paddingTop="@dimen/spacing_xlarge"
                android:paddingEnd="@dimen/spacing_standard"
                android:text="@string/lbl_forgot_password"
                android:textColor="#C6292929"
                android:textSize="@dimen/font_size_splash"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="@dimen/_220sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/forgot_password_title_description"
                android:textSize="@dimen/font_size_normal" />

            <EditText
                android:id="@+id/edtEmailFogotPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:hint="@string/hint_mail_forgot_password"
                android:inputType="textEmailAddress"
                android:singleLine="true"></EditText>

            <LinearLayout
                android:id="@+id/emailContaiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle">

                <ImageView
                    android:id="@+id/ivEmail"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_gmail">
                </ImageView>

                <TextView
                    android:id="@+id/tv_sent_mail"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_standard"
                    android:text="Recovery email sent successfully! Check your Inbox."
                    android:textColor="@color/sent_email_successfully">
                </TextView>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/tv_progress_sent_mail"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center">
            </ProgressBar>

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_standard"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:background="@drawable/bg_outline_button"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/lbl_reset_pasword"
                android:textColor="@color/commonColorWhite"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold"></Button>

            <TextView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/check_email_after_click_resetpassword"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/tvGoback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_xxxlarge"
                android:text="@string/lbl_goBack"
                android:textColor="@color/text_goback"
                android:textSize="@dimen/font_size_normal"
                android:textStyle="bold"></TextView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
