<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound_color_splash"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_standard_new"
            android:paddingTop="@dimen/spacing_smlarge"
            android:paddingEnd="@dimen/spacing_standard_new"
            android:paddingBottom="@dimen/spacing_large">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_app_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="m-Shop"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="cursive">
            </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/spacing_standard_new"
                    android:paddingTop="@dimen/spacing_xlarge"
                    android:text="@string/lbl_forgot_password"
                    android:textSize="@dimen/font_size_splash"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/forgot_password_title_description" />

            <EditText
                android:id="@+id/edtEmailFogotPassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true">
            </EditText>

            <Button
                android:id="@+id/btnSignIninSignIn"
                style="@style/MaterialButtonStyle.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_standard"
                android:text="@string/lbl_Submit"
                android:textStyle="bold">
            </Button>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
