<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/spacing_standard_new"
    android:elevation="4dp"
    android:layout_marginBottom="@dimen/spacing_standard"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_horizontal_item1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_product_title_cart_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="Áo thun Nam-Trắng-XXL"
        android:textSize="@dimen/font_size_normal"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toEndOf="@+id/iv_product"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_icon_coupon"
        android:layout_width="@dimen/_13sdp"
        android:layout_height="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_free_coupon"
        app:layout_constraintStart_toStartOf="@+id/tv_product_title_cart_item"
        app:layout_constraintTop_toTopOf="@+id/tv_free_coupon"
        app:srcCompat="@drawable/ic_coupon_fill"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_free_coupon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:text="Free 2 coupons"
        android:textColor="#673AB7"
        app:layout_constraintStart_toEndOf="@+id/iv_icon_coupon"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_title_cart_item" />

    <TextView
        android:id="@+id/tv_product_price_cart_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="100000đ"
        android:textColor="@color/red_ratings"
        android:textSize="@dimen/font_size_normal"
        app:layout_constraintStart_toEndOf="@+id/iv_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_free_coupon" />

    <TextView
        android:id="@+id/tv_cutted_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="150000đ"
        app:layout_constraintStart_toEndOf="@+id/tv_product_price_cart_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_free_coupon" />

    <View
        android:id="@+id/divider_cutted_price_wishlist_item"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cutted_price"
        app:layout_constraintEnd_toEndOf="@+id/tv_cutted_price"
        app:layout_constraintStart_toStartOf="@+id/tv_cutted_price"
        app:layout_constraintTop_toTopOf="@+id/tv_cutted_price"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/tv_offers_applied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/spacing_standard_new"
        android:textColor="@color/successGreen"
        android:text="@string/lbl_offers_applied"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cutted_price" />

    <TextView
        android:id="@+id/tv_coupens_applied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_standard_new"
        android:textColor="@color/red_ratings"
        android:text="@string/lbl_coupens_applied"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_offers_applied" />

    <TextView
        android:id="@+id/tv_product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:background="@drawable/bg_outline_discount_layout"
        android:drawableEnd="@drawable/ic_drop_down_arrow"
        android:drawablePadding="@dimen/spacing_standard"
        android:padding="@dimen/_5sdp"
        android:text="@string/lbl_product_quantity"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/font_size_normal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_coupens_applied"
        app:layout_constraintStart_toEndOf="@+id/iv_product"
        app:layout_constraintTop_toTopOf="@+id/tv_offers_applied"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/coupen_redemption_layout"
        android:layout_width="380dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_outline_discount_layout"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_quantity">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_standard"
            android:src="@drawable/ic_discount"></ImageView>

        <TextView
            android:id="@+id/tv_coupon_redemption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_standard"
            android:text="@string/lbl_vourcher"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_size_normal"></TextView>

        <Button
            android:id="@+id/btn_coupon_redemption"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_65sdp"
            android:background="@drawable/slider_background"
            android:backgroundTint="@color/teal_200"
            android:text="@string/lbl_apply"
            android:textColor="@color/white"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_remove_item"
        android:layout_width="@dimen/_8sdp"
        android:layout_height="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>